[package]
name = "video_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

thiserror = "1.0.30"
[dependencies.reqwest]
version = "0.11.8"
features = [ "gzip", "json","multipart","stream" ]